Fix image colors, show no results on mobile, test scroll fix

--- a/src/main/content/_assets/css/guide-card.css
+++ b/src/main/content/_assets/css/guide-card.css
@@ -10,7 +10,7 @@
  *******************************************************************************/
 
  .guide_item {
-    margin-bottom: 35px;
+    margin-bottom: 40px;
     height: 215px;
     padding-top: 22px;
     padding-left: 14px;
