--- a/src/main/content/_assets/css/guides.scss
+++ b/src/main/content/_assets/css/guides.scss
@@ -353,7 +353,7 @@ $blue-grey-color: #5d6a8e;
 }
 
 #guides_container .category_section:last-child .guide_subcategory_section:last-child {
-    padding-bottom: 100px;
+    padding-bottom: 150px;
 }
 
 #no_search_results_container {
@@ -376,7 +376,7 @@ $blue-grey-color: #5d6a8e;
     border-bottom: 2px solid #DEE1E8;
     padding: 10px 0px 10px 38px;
     margin: 0px;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
 }
 
 .no_results_section {
